--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!-- Links -->
             <div class="links">
-                <a href="MyupdateCV.pdf" target="_blank">View CV</a>
+                <a href="CV.pdf" target="_blank">View CV</a>
                 <a href="https://github.com/merveillecodjo" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/christamour-merveille-codjo-98135b303/" target="_blank">LinkedIn</a>
                 <a href="#" onclick="navigator.clipboard.writeText('mcodjo04@gmail.com'); alert('Email copié: mcodjo04@gmail.com'); return false;">Email</a>
